Closed Bug 568464 Opened 15 years ago Closed 15 years ago

NativeCompareAndSwap compilation failure on mingw.

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jacek, Unassigned)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Attached patch fixSplinter Review
The check: #if defined(_WIN32) && defined(_M_IX86) passes on mingw, because the check is for OS instead of compiler, and uses MSC-specific assembly that causes compilation failure. The right version for mingw is: #elif defined(__i386) && (defined(__GNUC__) || defined(__SUNPRO_CC)) The attached patch fixes the problem.
Attachment #447740 - Attachment is patch: true
Attachment #447740 - Flags: review?(brendan)
Comment on attachment 447740 [details] [diff] [review] fix Bouncing it to our resident windows guru.
Attachment #447740 - Flags: review?(brendan) → review?(dvander)
Attachment #447740 - Flags: review?(dvander) → review+
Jacek, do you have commit access?
No, I don't have. Please commit the patch.
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: