Fix NativeCompareAndSwap bustage on mingw (bug 568464, r=dvander).